--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.0",
     "react-file-viewer": "^1.2.1",
+    "react-hot-toast": "^2.1.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -23,6 +24,7 @@
     "react-textarea-autosize": "^8.3.3",
     "redux": "^4.1.0",
     "socket.io-client": "^4.2.0",
+    "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
